--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "my_gamma_script"
+name = "lua_engine"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clap = { version = "4.5.0", features = ["derive"] }
-gamma_macros = { path = "./gamma_macros" }
+clap = { version = "4.5.4", features = ["derive"] }
+gamma_macros = { path = "./lua_macros" }
