Add description to main crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 license-file = "LICENSE"
+description = "simple lua engine"
 keywords = ["lua", "embedded-scripting"]
 
 [dependencies]
