--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,4 @@ description = "simple lua engine"
 keywords = ["lua", "embedded-scripting"]
 
 [dependencies]
-clap = { version = "4.5.4", features = ["derive"] }
-lua_engine_macros = { path = "lua_engine_macros" }
+lua_engine_macros = { version = "0.1.0", path = "lua_engine_macros" }
