--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,9 @@ license-file = "LICENSE"
 description = "simple lua engine"
 keywords = ["lua", "embedded-scripting"]
 
+[[bin]]
+name = "lua-cli"
+path = "src/cli.rs"
+
 [dependencies]
 lua_engine_macros = { version = "0.1.0", path = "lua_engine_macros" }
